# InterpolatePlugin

./: README.md  interpolate-plugin.cabal
src/: InterpolatePlugin.hs  PluginFS.hs  PluginS.hs
test/: MyLibTest.hs
